# BazelCircleCIWorkshop

./: BUILD.bazel  WORKSPACE  deps.bzl  go.mod  pull_request_template.md
.circleci/: config.yml
srcs/Project1/: BUILD.bazel  main.go
